# lol-api-service-rust

./: .gitmodules  Cargo.toml  build.rs
src/: grpc.rs  main.rs  result.rs
src/config/: mod.rs
src/data_access/: league_access.rs  match_access.rs  mod.rs  player_access.rs  teams_access.rs  tournament_access.rs
src/services/: league_service.rs  match_service.rs  mod.rs  player_service.rs  team_service.rs  tournament_service.rs
src/util/: ddb.rs  grpc_timestamp.rs  mod.rs  tournament_ext.rs
